# polltroll

./: .gitignore  README.md  bun.lockb  index.html  package.json
.github/workflows/: publish-to-auto-release.yml
src/: main.ts  polls.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
